# YANES

./: CMakeLists.txt  Makefile  README.md  YANES.slnx  YANES.vcxproj  pom.xml
.github/workflows/: unit-testing.yml
src/: main.cpp
src/Logger/: Logger.cpp
src/core/bus/: Bus.cpp  Bus.h  IBus.h
src/core/cpu/: CPU.cpp  CPU.h
src/cpu_6502/: cpu_6502.cpp  cpu_6502.h
src/main/java/io/github/kraused53/: Main.java
src/main/java/io/github/kraused53/CPU/: CPU.java
src/main/java/io/github/kraused53/CPU/Register/: Register.java
src/test/java/: CPUTest.java  DummyTest.java  DummyTesting.java  RegisterTest.java
src/util/map/: address_map.h
tests/cpu/: cpu_testing.cpp  opcode_testing.cpp
